public/css/main.css
@import 'https://fonts.googleapis.com/css?family=Lato:400,700';

* {
  box-sizing: border-box;
}

html {
  font-family: Lato, sans-serif;
}

body {
  background-image: url('/img/background.jpg');
  background-position: 40% 40%;
  font-size: 18px;
}
.title {
  font-size: 24px;
  margin-bottom: 24px;
}
.result-table {
    border-collapse: collapse;
    margin-bottom: 32px;
}

.result-table td, th {
    border: 1px solid #dddddd;
    text-align: left;
    padding: 8px;
}

.result-table tr:nth-child(even) {
    background-color: #F2D2BD;
}

.main {
	display:flex;
	flex-direction:column;
	justify-content:center;
	align-items:center;
	min-height:100vh;
}

.welcome {
  width: 400px;
  text-align: center;
}

.welcome__greeting {
  font-size: 32px;
  margin-bottom: 32px;
  line-height: 125%;
}

.welcome__name {
  width: 100%;
  height: 32px;
  border-radius: 5px;
  border: 0;
  font-size: 18px;
  padding: 8px;
  outline: none;
  margin-bottom: 32px;
  text-align: center;
}

.button {
  display: inline-block;
  width: 185px;
  margin: 5px;
  padding: 8px;
  border: 0;
  border-radius: 5px;
  background-color: white;
  outline: none;
  font-size: 18px;
  font-family: Lato, sans-serif;
  text-decoration: none;
  color: black;
  text-align: center;
}

.button:hover {
  background-color: #74c0c8;
}

.question {
  text-align: center;
}

.question__text {
  font-size: 24px;
  margin-bottom: 32px;

}

